--- a/client/style.css
+++ b/client/style.css
@@ -7,13 +7,14 @@ body {
 
 #videos {
   display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 30px;
+  justify-content: space-around;
+  align-items: center;
+  height: 80vh;
 }
 
 video {
   width: 45%;
-  border: 2px solid white;
+  height: auto;
+  background: black;
   border-radius: 10px;
 }
